--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@
 
     .footer-container{
         height:375px;
+        width: 375px;
         background-color: #151515;
         color: #ffffff;
         
@@ -173,7 +174,7 @@
 
 }
 
-@media screen and (min-width:500px) and (max-width:769px) {
+@media screen and (min-width:376px) and (max-width:769px) {
 
     .image{
         width: 437px;
@@ -312,9 +313,11 @@
     }
 
     .footer-container{
+        margin: auto;
         position: relative;
-        top:280px;
-        height:375px;
+        top:120px;
+        height:216px;
+        width: 768px;
         background-color: #151515;
         color: #ffffff;
         display: flex;
@@ -323,10 +326,13 @@
     }
     
     .gallery-text{
-        width: 311px;
+        width: 689px;
         margin: auto;
         position: relative;
-        top: 50px;
+        top: 20px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
 
     #gallery{
@@ -337,19 +343,35 @@
     }
 
     #gallery-para{
-        padding-top:43px;
+        width: 281px;
         font-family:'outfit',sans-serif;
         font-size: 16px;
         line-height: 26px;
         font-weight: 300;
+        position: relative;
+        left:-20px;
     }
 
     .icon{
-        padding-top:43px;
         width:100px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+    }
+
+    #facebook{
+        width: 20px;
+        height: 20px;
+    }
+
+    #instagram{
+        width: 20px;
+        height: 20px;
+    }
+
+    #twitter{
+        width: 20px;
+        height: 16.25px;
     }
 
 }
